# apps/web/src/generated-api/openapi.json
@@ -4435,6 +4435,59 @@
         }
       }
     },
+    "/api/v1/publications/{publication_id}/reschedule": {
+      "post": {
+        "tags": [
+          "publications"
+        ],
+        "summary": "Reschedule Publication Endpoint",
+        "operationId": "reschedule_publication_endpoint_api_v1_publications__publication_id__reschedule_post",
+        "parameters": [
+          {
+            "name": "publication_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "title": "Publication Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PublicationScheduleRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PublicationOut"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/publications/{publication_id}/publish-now": {
       "post": {
         "tags": [
